<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_launcher_name">Clock</string>
    <string name="time_separator">:</string>
    <string name="time_zone">Time zone</string>
    <string name="vibrate">Vibrate</string>
    <string name="no_days_selected">No days selected</string>
    <string name="clock">Clock</string>
    <string name="timer">Timer</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="start_stopwatch">Start stopwatch</string>
    <string name="lap">Lap</string>
    <string name="stopwatch_stopped">Stopwatch has been stopped</string>
    <string name="timer_stopped">Timer has been stopped</string>
    <string name="max_reminder_duration">Max reminder duration</string>
    <string name="time_expired">Time expired</string>
    <string name="clock_and_date">Clock and date</string>
    <string name="use_text_shadow">Use text shadow</string>
    <string name="swipe_right_to_dismiss">Swipe right to Dismiss, or left to Snooze.</string>
    <string name="sort_by_creation_order">Creation order</string>
    <string name="sort_by_alarm_time">Alarm time</string>
    <string name="sort_by_timer_duration">Timer duration</string>
    <string name="sort_by_day_and_alarm_time">Day and Alarm time</string>
    <string name="analogue_clock">Analogue clock</string>
    <string name="digital_clock">Digital clock</string>
    <string name="alarm_dismissed">Alarm dismissed</string>
    <string name="select_timer_to_dismiss">Select timer to dismiss</string>
    <string name="select_alarm_to_dismiss">Select alarm to dismiss</string>
    <string name="alarm_created">Alarm created</string>
    <string name="alarm_snoozed">Alarm snoozed by %s</string>
    <string name="no_alarms_found">No alarms found</string>
    <string name="add_alarm">Add alarm</string>
    <string name="no_timers_found">No timers found</string>
    <string name="add_timer">Add timer</string>

    <!-- Elderly redesign, see docs/elderly-spec -->
    <string name="add_city">Add City</string>
    <string name="search_for_a_city">Search for a city</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="lap_number_format">Lap %d</string>
    <string name="start_stopwatch_elderly">Start Stopwatch</string>
    <string name="stop_stopwatch">Stop Stopwatch</string>
    <string name="reset">Reset</string>
    <string name="add_alarm_elderly">Add Alarm</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="delete_this_alarm_confirmation">Delete this alarm?</string>
    <string name="repeat">Repeat</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="scroll_to_set_time">Scroll to set time</string>
    <string name="scroll_to_set_alarm">Scroll to set time and alarm</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="alarm_schedule_line">%s Alarm</string>
    <string name="snooze_with_duration">Snooze — %s</string>
    <string name="times_up">Time\'s up</string>
    <string name="edit_alarm_action">Edit</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="am_pm">AM/PM</string>
    <string name="second">Second</string>
    <string-array name="am_pm_values">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string name="upcoming_alarm">Upcoming alarm</string>
    <string name="not_scheduled">Not scheduled</string>
    <string name="missed_alarm">Missed alarm</string>
    <string name="replaced_by_another_alarm">Replaced by another alarm</string>
    <string name="alarm_timed_out">Alarm timed out</string>

    <!-- Timer -->
    <string name="timers_notification_msg">Timers are running</string>
    <string name="timer_single_notification_label_msg">Timer for %s is running</string>
    <string name="new_timer">New Timer</string>

    <plurals name="timer_notification_msg">
        <item quantity="one">%d timer is running</item>
        <item quantity="other">%d timers are running</item>
    </plurals>

    <!-- Settings -->
    <string name="clock_tab">Clock tab</string>
    <string name="alarm_tab">Alarm tab</string>
    <string name="stopwatch_tab">Stopwatch tab</string>
    <string name="timer_tab">Timer tab</string>
    <string name="show_seconds">Show seconds</string>
    <string name="increase_volume_gradually">Increase volume gradually</string>
    <string name="settings_import_data">Import alarms and timers</string>
    <string name="settings_export_data">Export alarms and timers</string>

    <!-- FAQ -->
    <string name="faq_1_title">How can I change lap sorting at the stopwatch tab?</string>
    <string name="faq_1_text">Just click on any of the columns, that will make the laps be sorted by the given column. With additional clicks you can toggle between ascending and descending sorting.</string>
    <!--
        Haven't found some strings? There's more at
        https://github.com/FossifyOrg/Commons/tree/master/commons/src/main/res
    -->

</resources>
