<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stopwatch_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/stopwatch_column_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Nudged via asymmetric padding (not margin, so the 3 equal-weight columns are
             undisturbed) to sit closer over their digit group in the compact autosized string
             below - shared values with Timer's running-state header, see dimens.xml. -->
        <org.fossify.commons.views.MyTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="@dimen/elderly_time_header_hour_padding_start"
            android:paddingEnd="0dp"
            android:text="@string/hour"
            android:textSize="@dimen/elderly_body_text_size" />

        <org.fossify.commons.views.MyTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/elderly_time_header_minute_padding_end"
            android:text="@string/minute"
            android:textSize="@dimen/elderly_body_text_size" />

        <org.fossify.commons.views.MyTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/elderly_time_header_second_padding_end"
            android:text="@string/second"
            android:textSize="@dimen/elderly_body_text_size" />

    </LinearLayout>

    <org.fossify.commons.views.MyTextView
        android:id="@+id/stopwatch_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stopwatch_column_headers"
        android:layout_marginTop="@dimen/small_margin"
        android:autoSizeMaxTextSize="@dimen/elderly_display_text_size"
        android:autoSizeMinTextSize="@dimen/elderly_display_text_size_min"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFeatureSettings="tnum"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:textSize="@dimen/elderly_display_text_size"
        tools:text="00:00:02" />

    <org.fossify.commons.views.MyRecyclerView
        android:id="@+id/stopwatch_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/stopwatch_time"
        android:layout_above="@+id/stopwatch_buttons_holder"
        android:layout_marginTop="@dimen/normal_margin"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:visibility="gone"
        app:layoutManager="org.fossify.commons.views.MyLinearLayoutManager"
        tools:listitem="@layout/item_lap"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/stopwatch_buttons_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/stopwatch_secondary_buttons_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/stopwatch_reset"
                style="@style/ElderlyButton.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_weight="1"
                android:text="@string/reset"
                app:icon="@drawable/ic_restart_alt_vector" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/stopwatch_lap"
                style="@style/ElderlyButton.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lap"
                app:icon="@drawable/ic_stopwatch_vector" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stopwatch_play_pause"
            style="@style/ElderlyButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_margin"
            android:layout_marginVertical="@dimen/normal_margin"
            android:text="@string/start_stopwatch_elderly"
            app:icon="@drawable/ic_play_vector" />

    </LinearLayout>

</RelativeLayout>
