<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timer_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Setup state: no timer running, wheel picker + Start Timer -->
    <LinearLayout
        android:id="@+id/timer_setup_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <org.fossify.commons.views.MyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour"
                android:textSize="@dimen/elderly_body_text_size" />

            <org.fossify.commons.views.MyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minute"
                android:textSize="@dimen/elderly_body_text_size" />

            <org.fossify.commons.views.MyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/second"
                android:textSize="@dimen/elderly_body_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/timer_setup_hour_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:np_formatter="%02d"
                app:np_max="23"
                app:np_min="0"
                app:np_selectedTextSize="@dimen/elderly_list_time_text_size"
                app:np_textSize="@dimen/elderly_body_text_size" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/timer_setup_minute_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:np_formatter="%02d"
                app:np_max="59"
                app:np_min="0"
                app:np_selectedTextSize="@dimen/elderly_list_time_text_size"
                app:np_textSize="@dimen/elderly_body_text_size" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/timer_setup_second_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:np_formatter="%02d"
                app:np_max="59"
                app:np_min="0"
                app:np_selectedTextSize="@dimen/elderly_list_time_text_size"
                app:np_textSize="@dimen/elderly_body_text_size" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/timer_start"
            style="@style/ElderlyButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_margin"
            android:layout_marginVertical="@dimen/normal_margin"
            android:text="@string/start_timer"
            app:icon="@drawable/ic_play_vector" />

    </LinearLayout>

    <!-- Running / paused / finished state: countdown + Reset/Stop-Start -->
    <LinearLayout
        android:id="@+id/timer_running_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <!-- Nudged via asymmetric padding to sit closer over the compact countdown string's
             digit groups - shared values with Stopwatch's header, see dimens.xml. -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <org.fossify.commons.views.MyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="@dimen/elderly_time_header_hour_padding_start"
                android:paddingEnd="0dp"
                android:text="@string/hour"
                android:textSize="@dimen/elderly_body_text_size" />

            <org.fossify.commons.views.MyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/elderly_time_header_minute_padding_end"
                android:text="@string/minute"
                android:textSize="@dimen/elderly_body_text_size" />

            <org.fossify.commons.views.MyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/elderly_time_header_second_padding_end"
                android:text="@string/second"
                android:textSize="@dimen/elderly_body_text_size" />

        </LinearLayout>

        <org.fossify.commons.views.MyTextView
            android:id="@+id/timer_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:autoSizeMaxTextSize="@dimen/elderly_display_text_size"
            android:autoSizeMinTextSize="@dimen/elderly_display_text_size_min"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:fontFeatureSettings="tnum"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:textSize="@dimen/elderly_display_text_size"
            tools:text="3:11:06" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_margin"
            android:layout_marginVertical="@dimen/normal_margin"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/timer_reset"
                style="@style/ElderlyButton.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_weight="1"
                android:text="@string/reset"
                app:icon="@drawable/ic_restart_alt_vector" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/timer_play_pause"
                style="@style/ElderlyButton.Primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="@string/reset" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
